# scout-codes

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  morse.rs  murcielago.rs
